[gd_scene load_steps=3 format=3 uid="uid://chealth_display"]

[ext_resource type="Script" path="res://scripts/ui/health_display.gd" id="1_script"]
[ext_resource type="Texture2D" path="res://assets/sprites/heart-1.png" id="2_heart"]

[node name="HealthDisplay" type="CanvasLayer"]
layer = 10
script = ExtResource("1_script")

[node name="Container" type="Control" parent="."]
anchors_preset = 0
offset_left = 20.0
offset_top = 10.0
offset_right = 280.0
offset_bottom = 80.0

[node name="Heart1" type="TextureRect" parent="Container"]
offset_left = 0.0
offset_top = 0.0
offset_right = 70.0
offset_bottom = 70.0
texture = ExtResource("2_heart")
expand_mode = 1
stretch_mode = 5

[node name="Heart2" type="TextureRect" parent="Container"]
offset_left = 80.0
offset_top = 0.0
offset_right = 150.0
offset_bottom = 70.0
texture = ExtResource("2_heart")
expand_mode = 1
stretch_mode = 5

[node name="Heart3" type="TextureRect" parent="Container"]
offset_left = 160.0
offset_top = 0.0
offset_right = 230.0
offset_bottom = 70.0
texture = ExtResource("2_heart")
expand_mode = 1
stretch_mode = 5
